src/objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>Allowed_Amount__c</fullName>
        <label>Allowed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Amount__c</fullName>
        <label>Claim Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Not Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy</label>
        <referenceTo>Policy__c</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reciept_Date__c</fullName>
        <label>Reciept Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checked</label>
        <type>Checkbox</type>
    </fields>
    <label>Claim</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Claim Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>